<resources>
    <string name="app_name">Family Map</string>

    <!-- Options Menu -->
    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>

    <!-- Navigation Labels -->
    <string name="login_fragment_label">Login</string>
    <string name="map_fragment_label">Map</string>
    <string name="settings_activity_label">Settings</string>
    <string name="title_activity_person">Family Map: Person Details</string>
    <string name="title_activity_search">Family Map: Search</string>

    <string name="event_navigation_hint">Click on a marker to see event details</string>
    <string name="event_loading_hint">Loading person details&#8230;</string>

    <!-- Loading Labels -->
    <string name="loading_state_fetching_events">Fetching events&#8230;</string>
    <string name="loading_state_fetching_persons">Fetching persons&#8230;</string>
    <string name="loading_state_search">Searching&#8230;</string>

    <!-- Login -->
    <string name="login_fragment_label_server_host">Server Host</string>
    <string name="login_fragment_label_server_port">Server Port</string>
    <string name="login_fragment_label_uses_https">Uses HTTPS</string>
    <string name="login_fragment_label_username">Username</string>
    <string name="login_fragment_label_password">Password</string>
    <string name="login_fragment_label_first_name">First Name</string>
    <string name="login_fragment_label_last_name">Last Name</string>
    <string name="login_fragment_label_email_address">Email</string>
    <string name="login_fragment_label_gender">Gender</string>
    <string name="login_fragment_label_gender_male">Male</string>
    <string name="login_fragment_label_gender_female">Female</string>
    <string name="login_fragment_button_sign_in">Sign In</string>
    <string name="login_fragment_button_register">Register</string>

    <!-- Login Errors -->
    <string name="login_error_missing_username">The Username field is required</string>
    <string name="login_error_missing_password">The Password field is required</string>
    <string name="login_error_missing_email">The Email field is required</string>
    <string name="login_error_missing_first_name">You must provide a first name</string>
    <string name="login_error_missing_last_name">You must provide a last name</string>
    <string name="login_error_missing_gender">You must specify a gender</string>
    <string name="login_error_user_not_found">That user does not exist</string>
    <string name="login_error_incorrect_password">That password is incorrect</string>
    <string name="login_error_duplicate_username">That username is not available</string>

    <!-- Google Maps Errors -->
    <string name="maps_error_api_unavailable">Maps API is unavailable.</string>
    <string name="maps_error_canceled">Maps loading operation was canceled.</string>
    <string name="maps_error_developer_error">The developer is a dunderhead. Make sure to let him know he broke Google Maps. :)</string>
    <string name="maps_error_internal_error">There was a problem on Google\&#39;s end. Reload the app to try again.</string>
    <string name="maps_error_license_check_failed">This app is not licensed to the user.</string>
    <string name="maps_error_network_error">A network error occurred. Reload the app to try again.</string>
    <string name="maps_error_service_invalid">An invalid Google Play Services is installed.</string>
    <string name="maps_error_service_not_found">Google Play Services were not found.</string>
    <string name="maps_error_timeout">The connection timed out while trying to initialize.</string>
    <string name="maps_error_unknown">Unknown error occurred while trying to load maps.</string>

    <!-- Image Descriptions -->
    <string name="icon_description_female">Female</string>
    <string name="icon_description_male">Male</string>

    <!-- Person Details -->
    <string name="person_first_name">First Name</string>
    <string name="person_last_name">Last Name</string>
    <string name="person_gender">Gender</string>
    <string name="person_gender_male">Male</string>
    <string name="person_gender_female">Female</string>

    <string name="person_header_life_events">Life Events</string>
    <string name="person_header_relationships">Family</string>

    <string name="person_relationship_father">Father</string>
    <string name="person_relationship_mother">Mother</string>
    <string name="person_relationship_spouse">Spouse</string>
    <string name="person_relationship_child">Child</string>

    <!-- Search -->
    <string name="person_event_search_hint">Johnny Appleseed</string>

    <!-- Identifiers -->
    <string name="preference_file_key">com.example.familymapclient.PREFERENCE_FILE_KEY</string>
    <string name="preference_key_enabled_lines_life_story">enabled_lines_life_story</string>
    <string name="preference_key_enabled_lines_family_tree">enabled_lines_family_tree</string>
    <string name="preference_key_enabled_lines_spouse">enabled_lines_spouse</string>
    <string name="preference_key_enabled_filters_side_father">enabled_filters_side_father</string>
    <string name="preference_key_enabled_filters_side_mother">enabled_filters_side_mother</string>
    <string name="preference_key_enabled_filters_gender_male">enabled_filters_gender_male</string>
    <string name="preference_key_enabled_filters_gender_female">enabled_filters_gender_female</string>
    <string name="preference_action_log_out">action_log_out</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>
    <string name="preference_title_lines">Lines</string>
    <string name="preference_title_filter">Filter</string>
    <string name="preference_title_account">Account</string>

    <!-- Line Preferences -->
    <string name="preference_title_lines_life_story">Life Story Lines</string>
    <string name="preference_summary_lines_life_story">Show life story lines</string>
    <string name="preference_title_lines_family_tree">Family Tree Lines</string>
    <string name="preference_summary_lines_family_tree">Show family tree lines</string>
    <string name="preference_title_lines_spouse">Spouse Lines</string>
    <string name="preference_summary_lines_spouse">Show spouse lines</string>

    <!-- Filter Preferences -->
    <string name="preference_title_filter_side_father">Father\&#39;s Side</string>
    <string name="preference_summary_filter_side_father">Filter by father\&#39;s side of family</string>
    <string name="preference_title_filter_side_mother">Mother\&#39;s Side</string>
    <string name="preference_summary_filter_side_mother">Filter by mother\&#39;s side of family</string>
    <string name="preference_title_filter_gender_male">Male Events</string>
    <string name="preference_title_filter_gender_female">Female Events</string>
    <string name="preference_summary_filter_gender">Filter events based on gender</string>

    <!-- Account Preferences -->
    <string name="preference_title_account_logout">Log Out</string>
    <string name="preference_summary_account_logout">Return to login screen</string>

    <!-- Argument Strings -->
    <string name="arg_full_name">%1$s %2$s</string>
    <string name="arg_event_description">%1$s %2$s\n%3$s: %4$s, %5$s (%6$d)</string>
    <string name="arg_event_description_short">%1$s: %2$s, %3$s (%4$d)</string>
</resources>