<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory android:title="@string/preference_title_lines">

        <SwitchPreference
            android:defaultValue="true"
            android:key="@string/preference_key_enabled_lines_life_story"
            android:summary="@string/preference_summary_lines_life_story"
            android:title="@string/preference_title_lines_life_story" />
        <SwitchPreference
            android:defaultValue="true"
            android:key="@string/preference_key_enabled_lines_family_tree"
            android:summary="@string/preference_summary_lines_family_tree"
            android:title="@string/preference_title_lines_family_tree" />
        <SwitchPreference
            android:defaultValue="false"
            android:key="@string/preference_key_enabled_lines_spouse"
            android:summary="@string/preference_summary_lines_spouse"
            android:title="@string/preference_title_lines_spouse" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/preference_title_filter">

        <SwitchPreference
            android:defaultValue="true"
            android:key="@string/preference_key_enabled_filters_side_father"
            android:summary="@string/preference_summary_filter_side_father"
            android:title="@string/preference_title_filter_side_father" />
        <SwitchPreference
            android:defaultValue="true"
            android:key="@string/preference_key_enabled_filters_side_mother"
            android:summary="@string/preference_summary_filter_side_mother"
            android:title="@string/preference_title_filter_side_mother" />
        <SwitchPreference
            android:defaultValue="true"
            android:key="@string/preference_key_enabled_filters_gender_male"
            android:summary="@string/preference_summary_filter_gender"
            android:title="@string/preference_title_filter_gender_male" />
        <SwitchPreference
            android:defaultValue="true"
            android:key="@string/preference_key_enabled_filters_gender_female"
            android:summary="@string/preference_summary_filter_gender"
            android:title="@string/preference_title_filter_gender_female" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/preference_title_account">
        <Preference
            android:summary="@string/preference_summary_account_logout"
            android:title="@string/preference_title_account_logout"
            android:key="@string/preference_action_log_out" />
    </PreferenceCategory>

</PreferenceScreen>